# aspose-words-cloud-cpp

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Dockerfile.linux  Dockerfile.tests.linux  Dockerfile.tests.windows  Dockerfile.wincore  Dockerfile.windows  Jenkinsfile  JenkinsfileRelease  README.md  app.CMakeLists.txt  installSW.ps1  loadboost.ps1  runCheck.bat  runInDocker.linux.bat  runInDocker.windows.bat  testPackageInDocker.windows.bat
release/: CMakeLists.txt
scripts/: docker.bat  (+11 more)
sources/: ApiClient.cpp  ApiClient.h  ApiConfiguration.cpp  ApiConfiguration.h  ApiException.cpp  ApiException.h  CMakeLists.txt  HttpContent.cpp  HttpContent.h  IHttpBody.h  JsonBody.cpp  JsonBody.h  ModelBase.cpp  ModelBase.h  MultipartFormData.cpp  MultipartFormData.h  Object.cpp  Object.h
sources/Models/: ApiError.cpp
sources/Requests/: AcceptAllRevisionsRequest.cpp
sources/api/: WordsApi.cpp  WordsApi.h
sources/model/: ApiError.cpp  ApiError.h  AsposeResponse.cpp  AsposeResponse.h  AvailableFontsResponse.cpp  AvailableFontsResponse.h  BmpSaveOptionsData.cpp  BmpSaveOptionsData.h  Bookmark.cpp  Bookmark.h  BookmarkData.cpp  BookmarkData.h  BookmarkResponse.cpp  BookmarkResponse.h  Bookmarks.cpp  Bookmarks.h  BookmarksOutlineLevelData.cpp  BookmarksOutlineLevelData.h  BookmarksResponse.cpp  BookmarksResponse.h  Border.cpp  Border.h  BorderResponse.cpp  BorderResponse.h  BordersCollection.cpp  BordersCollection.h  BordersResponse.cpp  BordersResponse.h  ClassificationResponse.cpp  ClassificationResponse.h  ClassificationResult.cpp  ClassificationResult.h  Comment.cpp  Comment.h  CommentBase.cpp  CommentBase.h  CommentInsert.cpp  CommentInsert.h  CommentLink.cpp  CommentLink.h  (+450 more)
sources/model/requests/: AcceptAllRevisionsOnlineRequest.cpp  AcceptAllRevisionsOnlineRequest.h  AcceptAllRevisionsRequest.cpp  AcceptAllRevisionsRequest.h  AppendDocumentOnlineRequest.cpp  AppendDocumentOnlineRequest.h  AppendDocumentRequest.cpp  AppendDocumentRequest.h  ApplyStyleToDocmentElementRequest.cpp  ApplyStyleToDocmentElementRequest.h  ApplyStyleToDocumentElementOnlineRequest.cpp  ApplyStyleToDocumentElementOnlineRequest.h  ApplyStyleToDocumentElementRequest.cpp  ApplyStyleToDocumentElementRequest.h  BuildReportOnlineRequest.cpp  BuildReportOnlineRequest.h  BuildReportRequest.cpp  BuildReportRequest.h  ClassifyDocumentOnlineRequest.cpp  ClassifyDocumentOnlineRequest.h  ClassifyDocumentRequest.cpp  ClassifyDocumentRequest.h  ClassifyRequest.cpp  ClassifyRequest.h  CompareDocumentOnlineRequest.cpp  CompareDocumentOnlineRequest.h  CompareDocumentRequest.cpp  CompareDocumentRequest.h  ConvertDocumentRequest.cpp  ConvertDocumentRequest.h  CopyFileRequest.cpp  CopyFileRequest.h  CopyFolderRequest.cpp  CopyFolderRequest.h  CopyStyleOnlineRequest.cpp  CopyStyleOnlineRequest.h  CopyStyleRequest.cpp  CopyStyleRequest.h  CreateDocumentRequest.cpp  CreateDocumentRequest.h  (+758 more)
sources/model/responses/: AcceptAllRevisionsOnlineResponse.cpp  AcceptAllRevisionsOnlineResponse.h  AppendDocumentOnlineResponse.cpp  AppendDocumentOnlineResponse.h  ApplyStyleToDocumentElementOnlineResponse.cpp  ApplyStyleToDocumentElementOnlineResponse.h  CompareDocumentOnlineResponse.cpp  CompareDocumentOnlineResponse.h  CopyStyleOnlineResponse.cpp  CopyStyleOnlineResponse.h  CreateOrUpdateDocumentPropertyOnlineResponse.cpp  CreateOrUpdateDocumentPropertyOnlineResponse.h  DeleteAllParagraphTabStopsOnlineResponse.cpp  DeleteAllParagraphTabStopsOnlineResponse.h  DeleteBorderOnlineResponse.cpp  DeleteBorderOnlineResponse.h  DeleteBordersOnlineResponse.cpp  DeleteBordersOnlineResponse.h  DeleteParagraphListFormatOnlineResponse.cpp  DeleteParagraphListFormatOnlineResponse.h  DeleteParagraphTabStopOnlineResponse.cpp  DeleteParagraphTabStopOnlineResponse.h  (+102 more)
src/: CMakeLists.txt  api_client.cpp  api_configuration.cpp  api_exception.cpp  http_content.cpp  http_request_data.cpp  model_base.cpp  models.cpp  requests.cpp  responses.cpp  words_api.cpp
src/api/: words_api.cpp
src/models/: api_error.cpp  words_api_error_response.cpp  words_response.cpp
src/requests/: accept_all_revisions_request.cpp
src/responses/: accept_all_revisions_response.cpp  response_model_base.cpp
tests/: CMakeLists.txt  ExamplesTest.cpp  TestBase.cpp  TestBase.h  UrlEncodeTest.cpp  appendDocumentTest.cpp  baseTest.cpp  base_test.cpp  bookmarkTest.cpp  bookmarkTests.cpp  classificationTest.cpp  commentTest.cpp  compareDocumentTest.cpp  convertDocumentTest.cpp  custom.user.props  documentPropertiesTest.cpp  documentProtectionTest.cpp  documentStatisticsTest.cpp  documentTest.cpp  documentWithFormatTest.cpp  drawingObjectTest.cpp  examples_test.cpp  executeMailMergeTest.cpp  executeTemplateTest.cpp  fieldTest.cpp  fileTest.cpp  folderTest.cpp  fontTest.cpp  footnoteTest.cpp  formFieldTest.cpp  headerFooterTest.cpp  headersFooterTest.cpp  hyperlinkTest.cpp  listsTest.cpp  loadWebDocumentTest.cpp  macrosTest.cpp  mailMergeFields.cpp  mathObjectTest.cpp  oauthTest.cpp  pageSetupTest.cpp  (+18 more)
tests/api/: appendDocumentTests.cpp  append_document_test.cpp  append_document_test.h  bookmarkTests.cpp  bookmark_test.cpp  bookmark_test.h  buildReportTests.cpp  build_report_test.cpp  build_report_test.h  classificationTests.cpp  classification_test.cpp  classification_test.h  commentTests.cpp  comment_test.cpp  comment_test.h  compareDocumentTests.cpp  compare_document_test.cpp  compare_document_test.h  compatibilityTests.cpp  compatibility_test.cpp  compatibility_test.h  compress_document_test.h  convertDocumentTests.cpp  convert_document_test.cpp  convert_document_test.h  custom_xml_parts_test.h  documentPropertiesTests.cpp  documentProtectionTests.cpp  documentStatisticsTests.cpp  documentTests.cpp  documentWithFormatTests.cpp  document_properties_test.cpp  document_properties_test.h  document_protection_test.cpp  document_protection_test.h  document_statistics_test.cpp  document_statistics_test.h  document_test.cpp  document_test.h  document_with_format_test.cpp  (+90 more)
tests/other/: batch_test.h  examples_test.h  readme_test.h  url_encode_test.h
(+1561 files in other folders)
